Revision history for Neo4j::Driver

0.2005  2021-02-02

 - add experimental support for HTTP responses in Jolt format
 - announce future switch from Neo4j::Driver::Type::* to Neo4j::Types::*
 - fix Node->labels() method, which died on nodes without labels (issue #11)
 - declare Time::Piece 1.17 dependency (for Perl < 5.14)

0.20  2021-01-10

 - track timeout of HTTP transactions

0.19  2021-01-09  (TRIAL RELEASE)

 - add experimental support for newer Bolt protocol versions (for Neo4j 4)
 - add experimental protocol() method to ServerInfo
 - version discovery succeeds on Neo4j 1.x (which is otherwise unsupported)
 - rename StatementResult module to Result, in line with the Neo4j Driver API
 - internal redesign (removes private Transport modules)

0.18  2020-10-24

 - fix handling of index/key collisions in field names
 - deprecate experimental Record->{column_keys} access
 - deprecate experimental Record->{meta} access
 - deprecate experimental Path->path() method
 - warn when accessing the internals of node/rel/path objects (see issue #8)

0.17  2020-10-12

 - the Neo4j 4 default database name is reliably auto-detected (fix issue #6)
 - the option to select a database is no longer experimental
 - the option to select a database is now safely ignored on Neo4j 2/3
 - fix rare assertion failure when retrieving nodes or relations on Neo4j 4
 - get ServerInfo automatically when opening a new session
 - try to improve compatibility with outdated JSON module versions

0.16  2020-04-12

 - add experimental option to select a database specified by name (Neo4j 4)
 - fix handling of outdated JSON module versions

0.15  2020-02-20

 - support for secure communication using TLS encryption
 - add stable support for the Bolt protocol
 - remove XS dependency to support Pure Perl environments (HTTP only)
 - improve performance of running queries over HTTP
 - improve robustness of URL parsing
 - deprecate experimental mutability of auth credentials after session creation
