@@ -67,4 +67,8 @@ __END__
 The L<Neo4j::Driver::Result::Text> package is not part of the
 public L<Neo4j::Driver> API.
 
+=head1 SEE ALSO
+
+L<Neo4j::Driver::Net>
+
 =cut
